<resources>
    <string name="app_name">Food Ordering</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number (10 Digits)</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="signUp"><u>Do not have an account? Sign up now</u></string>
    <string name="forgotPass_Desc">Enter your registered mobile number and email below:</string>
    <string name="preference_file">User Preferences</string>
    <string name="us">\u0024</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="Rs">\u20B9</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite">Favorite</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q1">Q1.What will be the timing of the training ?</string>
    <string name="a1">A2.As this a purely online training program, you can choose to learn at any time of the day. We will recommend a pace to be followed throughout the program,but the actual timing and learning hours can be decided by students according to their convenience.</string>
    <string name="q2">Q2.How will the training be delivered ?</string>
    <string name="a2">A2. You will be taught using pre-recorded videos and text tutorials. The training has quizzes,assignment, and tests to help ypu learn better. At the end of the training you will be attempt a project of what to get hands-on practice of what you learn during your training.</string>
    <string name="q3">Q3.What is the duration of training?</string>
    <string name="a3">A3.The training duration is of 6 weeks.</string>
    <string name="q4">Q4.How much time should I spend everyday?</string>
    <string name="a4">A4.We recommend spending 10-12 hours per week.However,the actual learning hours can be decided by you as per convenience.</string>
    <string name="q5">Q5.When can I start my training?</string>
    <string name="a5">A5.You can choose your preferred batch date while signing up for thr training program.</string>

</resources>