<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".fragment.FaqFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="4dp">


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#DA0037"
        android:text="@string/q1"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/a1"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#DA0037"
        android:text="@string/q2"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/a2"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#DA0037"
        android:text="@string/q3"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/a3"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/question4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#DA0037"
        android:text="@string/q4"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/a4"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/question5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#DA0037"
        android:text="@string/q5"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/a5"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/question6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#DA0037"
        android:text="Q6.When will I get the certificate?"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="A6.You will be able to download the certificate once you complete your training and take the final test."
        android:layout_margin="10dp"
        android:textSize="20sp"/>
</LinearLayout>

</ScrollView>