<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e92c0c"
    tools:context=".activity.LogInActivity">
    
    <ImageView
        android:id="@+id/imgAppIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/txtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/mobile_number"
        android:textColorHint="#808080"
        android:textColor="#000000"
        android:maxLength="10"
        android:minLines="1"
        android:drawableLeft="@drawable/ic_mobile_number"
        android:padding="10dp"
        android:inputType="number"
        android:background="#FFFFFF"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/password"
        android:textColor="#000000"
        android:textColorHint="#808080"
        android:drawableLeft="@drawable/ic_password"
        android:padding="10dp"
        android:inputType="numberPassword"
        android:background="#ffffff"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="18sp"
        android:background="#fb4c0d"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

    </LinearLayout>


</LinearLayout>